--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "generate": "nuxt generate",
     "start": "nuxt start"
   },
+  "browserslist": "ie 11",
   "dependencies": {
     "nuxt": "^2.0.0",
     "react": "^18.2.0",
