--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "generate": "nuxt generate",
     "start": "nuxt start"
   },
-  "browserslist": "ie 11",
   "dependencies": {
+    "attachshadow": "^0.3.0",
+    "babel-plugin-transform-unicode-regexp-runtime": "^1.0.2",
     "nuxt": "^2.0.0",
+    "polyfill-crypto.getrandomvalues": "^1.0.0",
+    "proxy-polyfill": "^0.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "traitify-widgets": "^1.12.19"
